All dtos made records