@@ -1,15 +1,11 @@
 package org.example.beam.controller;
 
-import org.example.beam.dto.*;
-import org.example.beam.model.User;
-import org.example.beam.repository.UserRepository;
-import org.example.beam.service.UserService;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
 import org.mockito.*;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.example.beam.dto.*;
+import org.example.beam.service.UserService;
+import org.junit.jupiter.api.*;
 
-import java.util.*;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -20,13 +16,7 @@ class UserControllerTest {
     private UserController userController;
 
     @Mock
-    private UserRepository userRepository;
-
-    @Mock
     private UserService userService;
-
-    @Mock
-    private BCryptPasswordEncoder passwordEncoder; // add this
 
     @BeforeEach
     void setUp() {
@@ -35,10 +25,7 @@ class UserControllerTest {
 
     @Test
     void registerUser_success() {
-        CreateUserDto dto = new CreateUserDto();
-        dto.setName("test");
-        dto.setEmail("test@email.com");
-        dto.setPassword("1234");
+        CreateUserDto dto = new CreateUserDto("test", "test@email.com", "1234");
         String response = userController.registerUser(dto);
         assertEquals("User registered successfully", response);
         verify(userService, times(1)).createUser(any(CreateUserDto.class));
@@ -46,10 +33,7 @@ class UserControllerTest {
 
     @Test
     void registerUser_missingField() {
-        CreateUserDto dto = new CreateUserDto();
-        dto.setName(null);
-        dto.setEmail("test@email.com");
-        dto.setPassword("pwd");
+        CreateUserDto dto = new CreateUserDto(null, "test@email.com", "pwd");
         String response = userController.registerUser(dto);
         assertEquals("Please provide all the required fields", response);
         verify(userService, never()).createUser(any());
@@ -57,90 +41,61 @@ class UserControllerTest {
 
     @Test
     void login_success() {
-        CreateUserDto dto = new CreateUserDto();
-        dto.setName("test");
-        dto.setPassword("pwd");
-
-        User user = new User();
-        user.setName("test");
-        user.setPassword("hashed_pwd");
-
-        when(userRepository.findByName("test")).thenReturn(Optional.of(user));
-        when(passwordEncoder.matches("pwd", "hashed_pwd")).thenReturn(true); // mock matches
-
+        CreateUserDto dto = new CreateUserDto("test", null, "pwd");
+        when(userService.login(dto)).thenReturn("Login successful");
         String response = userController.login(dto);
         assertEquals("Login successful", response);
     }
 
     @Test
     void login_fail_wrongPassword() {
-        CreateUserDto dto = new CreateUserDto();
-        dto.setName("test");
-        dto.setPassword("wrong");
-
-        User user = new User();
-        user.setName("test");
-        user.setPassword("hashed_pwd");
-
-        when(userRepository.findByName("test")).thenReturn(Optional.of(user));
-        when(passwordEncoder.matches("wrong", "hashed_pwd")).thenReturn(false); // mock matches
-
-        String response = userController.login(dto);
-        assertEquals("Login failed", response);
+        CreateUserDto dto = new CreateUserDto("test", null, "wrong");
+        when(userService.login(dto)).thenThrow(new RuntimeException("Invalid password"));
+        assertThrows(RuntimeException.class, () -> userController.login(dto));
     }
 
     @Test
     void login_fail_userNotFound() {
-        CreateUserDto dto = new CreateUserDto();
-        dto.setName("nope");
-        dto.setPassword("anything");
-        when(userRepository.findByName("nope")).thenReturn(Optional.empty());
-        String response = userController.login(dto);
-        assertEquals("Login failed", response);
+        CreateUserDto dto = new CreateUserDto("nope", null, "anything");
+        when(userService.login(dto)).thenThrow(new RuntimeException("User not found"));
+        assertThrows(RuntimeException.class, () -> userController.login(dto));
     }
 
     @Test
     void deleteUser_callsService() {
-        long id = 1L;
-        userController.deleteUser(id);
-        verify(userService).deleteUser(id);
+        userController.deleteUser(1L);
+        verify(userService).deleteUser(1L);
     }
 
     @Test
     void updateUser_success() {
-        long id = 1L;
-        UpdateUserDto dto = new UpdateUserDto();
-        dto.setName("updated");
-        dto.setEmail("new@email.com");
-        dto.setPassword("newpwd");
-        String response = userController.updateUser(id, dto);
+        UpdateUserDto dto = new UpdateUserDto("updated", "new@email.com", "newpwd");
+        String response = userController.updateUser(1L, dto);
         assertEquals("User updated successfully", response);
-        verify(userService, times(1)).updateUser(eq(id), any(UpdateUserDto.class));
+        verify(userService, times(1)).updateUser(eq(1L), any(UpdateUserDto.class));
     }
-
 
     @Test
     void getMyProfile_success() {
-        long id = 3L;
-        User user = new User();
-        user.setName("testuser");
-        user.setEmail("test@beam.com");
-        when(userRepository.findById(id)).thenReturn(Optional.of(user));
-        ShowUserDto dto = userController.getMyProfile(id);
-        assertEquals("testuser", dto.getName());
-        assertEquals("test@beam.com", dto.getEmail());
+        ShowUserDto dto = new ShowUserDto(3L, "testuser", "test@beam.com");
+        when(userService.getUser(3L)).thenReturn(dto);
+        ShowUserDto result = userController.getMyProfile(3L);
+        assertEquals("testuser", result.name());
+        assertEquals("test@beam.com", result.email());
     }
 
     @Test
     void getMyProfile_notFound() {
-        long id = 22L;
-        when(userRepository.findById(id)).thenReturn(Optional.empty());
-        assertThrows(RuntimeException.class, () -> userController.getMyProfile(id));
+        when(userService.getUser(22L)).thenThrow(new RuntimeException("User not found"));
+        assertThrows(RuntimeException.class, () -> userController.getMyProfile(22L));
     }
 
     @Test
     void getAllUsers_callsService() {
-        List<ShowUserDto> users = Arrays.asList(new ShowUserDto(), new ShowUserDto());
+        List<ShowUserDto> users = List.of(
+                new ShowUserDto(1L, "user1", "user1@email.com"),
+                new ShowUserDto(2L, "user2", "user2@email.com")
+        );
         when(userService.getAllUsers()).thenReturn(users);
         List<ShowUserDto> result = userController.getAllUsers();
         assertEquals(2, result.size());
